--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,5 +5,25 @@ body,p,div,span,a,table,tb{
     background-color: #f7fafc;
     box-shadow: none !important;
     color: #3c4257;
+}
+.md-footer {
+    background-color: rgb(255 255 255);
+    color: #3c4257;
+}
+.md-footer-meta {
+    background-color: rgb(255 255 255);
+    color: #333;
+}
+.md-footer-copyright, .md-footer-copyright:hover {
+    color: #333333 !important;
+}
+html .md-footer-meta.md-typeset a, html .md-footer-meta.md-typeset a:hover {
+     color: hsl(0deg 0% 0%);
+}
+.md-tabs {
+    background-color: #f7fafc;
+    color: #0e0e0e;
+    overflow: auto;
+    width: 100%;
     border-bottom: 1px solid #e3e8ee;
 }
