--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -15,19 +15,19 @@ This file was automatically generated - do not edit
         </label>
         <div class="md-header__title" data-md-component="header-title">
             <div class="md-header__ellipsis">
-                <div class="md-header__topic">
-          <span class="md-ellipsis">
-            {{ config.site_name }}
-          </span>
-                </div>
+<!--                <div class="md-header__topic">-->
+<!--                  <span class="md-ellipsis" style="line-height: 2.5;font-size: 20px;">-->
+<!--                    {{ config.site_name }}-->
+<!--                  </span>-->
+<!--                </div>-->
                 <div class="md-header__topic" data-md-component="header-topic">
-          <span class="md-ellipsis">
-            {% if page and page.meta and page.meta.title %}
-              {{ page.meta.title }}
-            {% else %}
-              {{ page.title }}
-            {% endif %}
-          </span>
+<!--                  <span class="md-ellipsis">-->
+<!--                    {% if page and page.meta and page.meta.title %}-->
+<!--                      {{ page.meta.title }}-->
+<!--                    {% else %}-->
+<!--                      {{ page.title }}-->
+<!--                    {% endif %}-->
+<!--                  </span>-->
                 </div>
             </div>
         </div>
