--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -70,7 +70,7 @@ This file was automatically generated - do not edit
         <label class="md-header__button md-icon" for="__search">
             {% include ".icons/material/magnify.svg" %}
         </label>
-<!--        {% include "partials/search.html" %}-->
+        {% include "partials/search.html" %}
         {% endif %}
         {% if config.repo_url %}
         <div class="md-header__source">
